Tab alignment fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4615,7 +4615,7 @@ footer .copyright{color:#EEE;}
 /* TAB */
 
 /*-----------------------------------*/
-.section-title{position:absolute; top:-53px; left:50%; margin-left:-130px; width:260px; padding:18px 0; text-align:center; border-top-left-radius:3px; border-top-right-radius:3px; }
+.section-title{position:absolute; top:-56px; left:50%; margin-left:-130px; width:260px; padding:18px 0; text-align:center; border-top-left-radius:3px; border-top-right-radius:3px; }
 .section-title h3{margin:0; padding:0; font-size:16px; font-weight:600; text-transform:uppercase;}
 
         /*-----------------------------------*/
